// TODO remove unused prefs
// TODO color pal edit for SRM and L2 VEL/REF
// TODO don't display full precision in lat/lon in settings location edit
// TODO  enhance formatting for NHC Storms
// TODO - bug , SPC Meso swipe left/right takes on extra to get started
// TODO - in settings homescreen remove 7DAY from choices
// TODO - nexrad radar on landscape - switch to dual pane is not centered
// TODO - in settings indicate minutes for varoius update options (widget/notification)
// TODO - update polygons when radar is open (in addition to background). Possibly use two sets of prefs , cloned at radar start
// TODO - color pal , allow cloning of a user created pal
// TODO - radar , tap stop button should then fetch latest radar

[ADD] - adding something new - method, file, etc. to the repo
[REM] - remove items
[IMP] - improvement
[DEB] - Added temporary debug code
[FIX] - bug fixes
[REF] - refactor a method, group, variable, etc.
[MER] - merge

55190 2019_05_18    [IMP] add more whitespace around hazards on main screen
                    [IMP] don't squash whitespace in US alerts detail
                    [REF] camelCase and better naming
                    [IMP] change default warning line size from 4 to 5 (does not impact existing users). Remove default values from some help strings as
                    they are shown elsewhere
55189 2019_05_18    [REF] more work on 7day object
                    [REF] more work on cc object
55188 2019_05_18    [REF] more work on hazards object
55187 2019_05_18    [IMP] Left justify hourly text
                    [REF] camelCase and better naming
55186 2019_05_18    [IMP] add quad pane link in dual pane (Jim)
                    [IMP] in dual pane invoked from single pane save product changes (Jim)
                    [REF] change how ObjectForecastPackageHazards is used
55185 2019_05_17    [REF] camelCase and better naming
55184 2019_05_17    [REF] camelCase and better naming